Prevent shifting page content on dialog opening/closing

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -13,8 +13,15 @@
     --header-with-margin-height: calc(var(--header-height) + var(--header-margin));
 }
 
-html {
+body {
     overflow-y: scroll;
+}
+
+body.p-overflow-hidden {
+    .header-fixed {
+        /*noinspection CssUnresolvedCustomProperty*/
+        padding-right: var(--scrollbar-width);
+    }
 }
 
 .p-button-icon {
